test/tests/compiler/6_statements_and_conditional_expressions/valid/if_nested_3.plx



pub fn main(none) i32 {
    a: i32 = 0
    if (a = 1) {
        if a == 1 {
            a = 3
        }
        else {
            a = 4
        } }

    return a
}
